--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -2,7 +2,7 @@
 body {
   font-size: 20px;
   color: $gray-900;
-  // @include serif-font;
+  @include serif-font;
 }
 
 p {
@@ -20,12 +20,12 @@ h4,
 h5,
 h6 {
   font-weight: 800;
-  // @include sans-serif-font;
+  @include sans-serif-font;
 }
 
 a {
   color: $gray-900;
-  // @include transition-all;
+  @include transition-all;
   &:focus,
   &:hover {
     color: $primary;
